# taxbyte

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  SECURITY_PDF_GENERATION.md  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
config/: README.md  default.toml  local.toml.example
docs/: GOOGLE_OAUTH_SETUP.md  OAUTH_IMPLEMENTATION_STATUS.md
examples/: config_usage.rs  user_repository_usage.rs
migrations/: 20260131000003_create_login_attempts_table.sql  20260131000004_create_companies_table.sql  20260131000005_create_company_members_table.sql  20260201000002_add_company_vat_number.sql  20260201120000_create_bank_accounts_tables.sql  20260202000002_change_invoice_number_to_text.sql  20260202000003_create_invoice_templates.sql  20260203000001_add_deleted_at_to_users.sql
migrations/postgresql/: 20260131000001_create_users_table.sql  20260131000002_create_sessions_table.sql  20260201000001_create_active_companies_table.sql  20260202000001_create_invoices_tables.sql  20260204000001_add_pdf_drive_fields.sql  20260205000001_add_company_storage_config.sql  20260208000001_add_oauth_tokens_to_companies.sql  20260403000001_drop_invoice_folder_path.sql  20260403000002_create_report_tables.sql  20260405000001_add_receipt_path.sql  20260409000001_make_iban_nullable.sql
migrations/sqlite/: 20260131000001_initial_schema.sql  20260403000001_drop_invoice_folder_path.sql  20260403000002_create_report_tables.sql  20260409000001_make_iban_nullable.sql
scripts/: setup.sh
src/: main.rs
src/adapters/http/: dtos.rs  errors.rs  mod.rs  routes.rs  templates.rs
src/application/: mod.rs
src/application/auth/: get_current_user.rs  login_user.rs  logout_all_devices.rs  logout_user.rs  mod.rs  register_user.rs
src/application/company/: add_company_member.rs  archive_bank_account.rs  connect_google_drive.rs  create_bank_account.rs  create_company.rs  disconnect_google_drive.rs  get_bank_accounts.rs  get_company_details.rs  (+9 more)
src/domain/: mod.rs
src/infrastructure/: config.rs  mod.rs
static/css/: custom.css
static/js/: theme.js
templates/components/: company_selector.html.tera  create_company_modal.html.tera  footer.html.tera  navbar.html.tera  theme_toggle.html.tera
templates/dev/: mock_oauth.html
templates/layouts/: base.html.tera
templates/pages/: bank_accounts.html.tera  companies.html.tera  company_members.html.tera  company_settings.html.tera  customers.html.tera  dashboard.html.tera  invoice_create.html.tera  invoice_create_from_template.html.tera  invoice_details.html.tera  invoice_templates.html.tera  invoices.html.tera  invoices_archived.html.tera  login.html.tera  received_invoices.html.tera  register.html.tera  report_create.html.tera  report_details.html.tera  reports.html.tera
templates/partials/: bank_account_card.html.tera  company_list_dropdown.html.tera  company_settings_form.html.tera  create_bank_account_form.html.tera  create_company_form.html.tera  create_customer_form.html.tera  empty_company_state.html.tera  invoice_pdf.html.tera  login_form.html.tera  member_row.html.tera  received_invoice_form_fields.html.tera  register_form.html.tera
(+128 files in other folders)
